--- a/.config/vivify/github-dark.css
+++ b/.config/vivify/github-dark.css
@@ -5,9 +5,23 @@ html {
 
 body {
   color: #c5c9c5;
-  max-width: 60rem;
+  max-width: 50rem;
   margin: auto;
   padding: 16px;
+  font-size: 17px;
+}
+
+p:has(img) {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+p img + em {
+  font-size: 15px;
+  margin-inline: 10%;
+  text-align: center;
 }
 
 .markdown-body {
@@ -15,8 +29,7 @@ body {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   margin: 0;
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
-  font-size: 16px;
+  font-family: "Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Segoe UI Emoji";
   line-height: 1.5;
   word-wrap: break-word;
 }
